--- a/public/thermostat.css
+++ b/public/thermostat.css
@@ -1,11 +1,30 @@
 body {
-    background-color: lightblue;
+  background-color: lightblue;
 }
 
 h1 {
   color: green;
+  font-family: verdana;
 }
 
 p {
   color: yellow;
+  font-family: verdana;
+}
+
+p.temp-font {
+  color: black;
+  font-size: 30px;
+}
+
+button {
+    background-color: #4CAF50; /* Green */
+    border-radius: 25px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
